change titles of pages

--- a/EasyGames/Views/StockItems/Edit.cshtml
+++ b/EasyGames/Views/StockItems/Edit.cshtml
@@ -9,7 +9,7 @@ That's the edit view and the more stuff you can edit the more of the edit view i
 
 <h1>Edit</h1>
 
-<h4>StockItem</h4>
+<h4>Stock Items</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
