--- a/EasyGames/Views/StockItems/Index.cshtml
+++ b/EasyGames/Views/StockItems/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<EasyGames.Models.StockItem>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Main Stock Levels";
 }
 
 <h1>Index</h1>
