--- a/EasyGames/Areas/Identity/Pages/Account/Register.cshtml
+++ b/EasyGames/Areas/Identity/Pages/Account/Register.cshtml
@@ -6,20 +6,25 @@
 
 <h1>@ViewData["Title"]</h1>
 
-
+<div class="alert alert-warning mb-4" role="alert">
+    <h5 class="alert-heading"><i class="bi bi-exclamation-triangle"></i> Registration Currently Unavailable</h5>
+    <p>New registrations will not work as the email server has not been configured for this application.</p>
+    <hr />
+    <p class="mb-0">
+        <strong>To test the application:</strong> Use the default login accounts documented in <a href="https://github.com/vaug0086/EasyGames/blob/master/README.md" class="alert-link">README.md</a>:
+    </p>
+    <ul class="mt-2 mb-0">
+        <li><strong>Admin:</strong> admin@easygames.com / Admin123!</li>
+        <li><strong>Proprietor:</strong> proprietor@easygames.com / Proprietor123!</li>
+        <li><strong>Customer:</strong> user@easygames.com / User123!</li>
+    </ul>
+    <p class="mt-2 mb-0">
+        <small><em>Admins can create new users from the admin panel.</em></small>
+    </p>
+</div>
 
 <div class="row">
-    @*
-    what this page does 
-    renders the identity register razor page bound to registermodel. input is the view-model that gets model-bound on post.
-    uses tag helpers so nad, labels validtion spans, and coect form action ar generated
-    adds custom profile fieldswith the scaffolded identity fields 
-    these require that applicationuser has matching properties and that the register handler copies input  
-    with applicationuser b4 createasync.
-
-    *@
-
-    <div class="col-md-4">
+    <div class="col-md-6 mx-auto">
         <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
             <h2>Create a new account.</h2>
             <hr />
@@ -52,36 +57,6 @@
             </div>
             <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
         </form>
-    </div>
-    <div class="col-md-6 col-md-offset-2">
-        <section>
-            <h3>Use another service to register.</h3>
-            <hr />
-            @{
-                if ((Model.ExternalLogins?.Count ?? 0) == 0)
-                {
-                    <div>
-                        <p>
-                            There are no external authentication services configured. See this <a href="https://go.microsoft.com/fwlink/?LinkID=532715">article
-                            about setting up this ASP.NET application to support logging in via external services</a>.
-                        </p>
-                    </div>
-                }
-                else
-                {
-                    <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
-                        <div>
-                            <p>
-                                @foreach (var provider in Model.ExternalLogins!)
-                                {
-                                    <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
-                                }
-                            </p>
-                        </div>
-                    </form>
-                }
-            }
-        </section>
     </div>
 </div>
 
