--- a/EasyGames/Views/StockItems/Index.cshtml
+++ b/EasyGames/Views/StockItems/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Main Stock Levels";
 }
 
-<h1>Index</h1>
+<h1>@ViewData["Title"]</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
