--- a/EasyGames/Views/Orders/Index.cshtml
+++ b/EasyGames/Views/Orders/Index.cshtml
@@ -21,10 +21,28 @@ else
         <tbody>
             @foreach (var o in Model)
             {
+                var hasBackorder = o.Items.Any(i => i.IsBackordered); // we're checking for backordered items and saving them
+                var backorderCount = o.Items.Where(i => i.IsBackordered).Sum(i => i.QuantityBackordered);
                 <tr>
                     <td>@o.Id</td>
                     <td>@o.CreatedUtc.ToLocalTime()</td>
-                    <td>@o.Status</td>
+                    <td>
+                        @o.Status
+                        @if (hasBackorder)
+                        {
+                            <br />
+                            <span class="badge bg-warning text-dark">
+                                @{
+                                    // NOTE FROM FRANK
+                                    // if items are backordered we add a badge
+                                    // we use the ternary operator to add an s if there are more than 1 on backorder 
+                                    // see more about the ternary operator on PosController.cs
+                                    // <i> is for the icon
+                                }
+                                <i class="bi bi-clock-history"></i> @backorderCount item@(backorderCount == 1 ? "" : "s") backordered
+                            </span>
+                        }
+                    </td>
                     <td>@o.GrandTotal.ToString("C")</td>
                     <td><a asp-action="Details" asp-route-id="@o.Id" class="btn btn-sm btn-outline-secondary">View</a></td>
                 </tr>
