I've made changes regarding how the checkout counts and decrements the stock. PLEASE REVIEW as I do not know if you want the stock counter to go negative. I've added comments to this end. The files for you to review are CartController.cs OrdersAdminController.cs Order.cs StockItem.cs This https://learn.microsoft.com/en-us/aspnet/core/data/ef-mvc/concurrency?view=aspnetcore-9.0 was used for the modification of orders. The functionality is now if the order is changed from pending to cancelled the stock is restored.

--- a/EasyGames/Views/Shared/_Card.cshtml
+++ b/EasyGames/Views/Shared/_Card.cshtml
@@ -26,6 +26,7 @@
     </div>
     <div class="card-footer bg-transparent border-0">
         <div class="d-flex justify-content-between align-items-center">
+            @*Below is the model quanity... *@
             <small class="text-muted">In stock: @Model.Quantity</small>
             <a class="btn btn-outline-secondary btn-sm"
                asp-controller="Catalogue" asp-action="Details" asp-route-id="@Model.Id">
