Pos Order History Working
Pos Shop Order History working well. Francis backorder working well with it. Many options to filter down to find previous orders. Minor Comment changes

Resources: https://learn.microsoft.com/en-us/ef/core/querying/ https://medium.com/@sabbiryan/entity-framework-core-query-optimization-best-practices-49c28d079d43
https://learn.microsoft.com/en-us/aspnet/core/data/ef-mvc/sort-filter-page?view=aspnetcore-9.0&utm_source=chatgpt.com
https://medium.com/@emreemenekse/differences-and-use-cases-of-iqueryable-ienumerable-list-and-icollection-in-net-core-179cd4d64eaf

--- a/EasyGames/Views/Shared/_Layout.cshtml
+++ b/EasyGames/Views/Shared/_Layout.cshtml
@@ -84,8 +84,14 @@ renders tempdata alerts for user feedback *@
                                                 <i class="bi bi-cash-register"></i> POS
                                             </a>
                                         </li>
+                                        <li>
+                                            <a class="dropdown-item" asp-controller="PosOrders" asp-action="Index">
+                                                <i class="bi"></i>POS Orders
+                                            </a>
+                                        </li>
                                     </ul>
                                 </li>
+
                             }
                         }
                         <!-- Moved to drop down list using Claude Code. "Can you group all the admin links under a dropdown menu to clean up the navbar? "-->
