--- a/EasyGames/Views/Shared/_Layout.cshtml
+++ b/EasyGames/Views/Shared/_Layout.cshtml
@@ -135,7 +135,7 @@ renders tempdata alerts for user feedback *@
                                     </li>
                                     <li>
                                         <a class="dropdown-item" asp-area="Admin" asp-controller="Campaigns" asp-action="Index">
-                                            <i class="bi bi-megaphone-fill"></i> Campaigns (Admin)
+                                            <i class="bi bi-megaphone-fill"></i> Campaigns
                                         </a>
                                     </li>
 
